--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,7 @@
 		%sveltekit.head%
 		<title>Jimmy Van</title>
   		<link rel="icon" href="/assets/images/Jlogo.jpg"" type="image/x-icon">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<!-- fonts -->
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link
